Wed Dec  8 21:18:12 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): vm->cache needed when
	  rb_objspace_free runs, but after rb_objspace_free finished,
	  rb_objspace_xfree no longer possible.

Wed Dec  8 20:59:13 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): vm->mark_object_ary shall be flushed
	  prior to rb_objspace_free, otherwise objects might remain alive.

Wed Dec  8 20:29:44 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* marshal.c (free_compat_allocator_tbl): New function.  In the
	  first place, thie compat_allocator_tbl has been leaked ever
	  since it has been introduced.  I double-checked this on my
	  repo's annotation.  Once upon a time when we has only one VM per
	  a process, the leak was not a problem, because the hash table
	  survives entire process lifetime.  Now that we have multiple
	  VMs, VM termination is no longer connected to process
	  termination, and this hash is per VM, not per problem.  So the
	  leak is now a real problem.

	* marshal.c (InitVM_marshal): Register free_compat_allocator_tbl
	  to be kicked when this object is freed.

Wed Dec  8 19:48:31 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): vm->init_options shall be freed.

Wed Dec  8 19:43:15 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_make_bare_vm): This malloc generates an immediate
	  memory leak.  Might be a merge mistake.

Tue Dec  7 22:00:59 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread_pthread.c (native_thread_destroy): th->altstack shall be freed.

Tue Dec  7 21:36:36 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (FinalVM_redefined_flag): vm->opt_method_table shall be freed.

	* vm.c (vm_init_redefined_flag): revister FinalVM_redefined_flag

Tue Dec  7 19:24:33 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* variable.c (FinalVM_var_table): vm->global_symbol shall be freed
